--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ PRODUCT_URL='http://10.0.2.2:3000/api/products'
 SELLER_URL='http://10.0.2.2:3000/api/sellers'
 CATEGORIES_URL='http://10.0.2.2:3000/api/categories'
 SUBCATEGORY_URL='http://10.0.2.2:3000/api/sub-categories'
+AUTH_URL='http://10.0.2.2:3000/api/auth'
