ajout dsu cart_url

--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ CATEGORIES_URL='http://10.0.2.2:3000/api/categories'
 SUBCATEGORY_URL='http://10.0.2.2:3000/api/sub-categories'
 AUTH_URL='http://10.0.2.2:3000/api/auth'
 UMENU_URL='http://10.0.2.2:3000/api/user-menu'
+CART_URL='http://10.0.2.2:3000/api/carts'
