--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PRODUCT_URL='http://10.0.2.2:3000/api/products'
-SELLER_URL='http://10.0.2.2:3000/api/sellers'
-CATEGORIES_URL='http://10.0.2.2:3000/api/categories'
-SUBCATEGORY_URL='http://10.0.2.2:3000/api/sub-categories'
+LOCAL_URL='http://10.0.2.2:3000/api/locals'
+CATEGORY_URL='http://10.0.2.2:3000/api/categories'
+TYPE_URL='http://10.0.2.2:3000/api/product-types'
 AUTH_URL='http://10.0.2.2:3000/api/auth'
-UMENU_URL='http://10.0.2.2:3000/api/user-menu'
+AMENU_URL='http://10.0.2.2:3000/api/app-menu'
 CART_URL='http://10.0.2.2:3000/api/carts'
