--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,8 +35,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  riverpod: ^2.5.1
-  flutter_riverpod: ^2.5.1
+  riverpod: ^2.6.1
+  flutter_riverpod: ^2.6.1
   http: ^1.2.2
   flutter_secure_storage: ^9.2.2
   heroicons: ^0.10.0
@@ -51,9 +51,10 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   riverpod_generator: ^2.4.3
-  build_runner: ^2.4.13
+  build_runner: ^2.4.14
   json_serializable: ^6.8.0
   flutter_lints: ^4.0.0
+  analyzer: ^6.9.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
