--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_dotenv: ^5.1.0
   json_annotation: ^4.9.0
   google_fonts: ^6.2.1
+  toastification: ^2.3.0
 
 dev_dependencies:
   flutter_test:
