--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,10 @@ dependencies:
   json_annotation: ^4.9.0
   google_fonts: ^6.2.1
   toastification: ^2.3.0
+  url_launcher: ^6.3.1
+  get_it: ^8.0.3
+  get: ^4.6.6
+  sizer: ^3.0.4
 
 dev_dependencies:
   flutter_test:
