--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ TYPE_URL='http://10.0.2.2:3000/api/product-types'
 AUTH_URL='http://10.0.2.2:3000/api/auth'
 AMENU_URL='http://10.0.2.2:3000/api/app-menu'
 CART_URL='http://10.0.2.2:3000/api/carts'
+ADDRESS_URL='http://10.0.2.2:3000/api/addresses'
