--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,7 +52,8 @@ dependencies:
   get: ^4.6.6
   sizer: ^3.0.4
   intl: ^0.20.1
-  isar: ^3.1.0+1
+  isar: 4.0.0-dev.14
+  isar_flutter_libs: 4.0.0-dev.14
 
 dev_dependencies:
   flutter_test:
@@ -61,6 +62,9 @@ dev_dependencies:
   build_runner: ^2.4.14
   json_serializable: ^6.8.0
   flutter_lints: ^4.0.0
+
+
+dependency_overrides:
   analyzer: ^6.9.0
 
 # For information on the generic Dart part of this file, see the
