--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   intl: ^0.20.1
   isar: 4.0.0-dev.14
   isar_flutter_libs: 4.0.0-dev.14
+  flutter_html: ^3.0.0-beta.2
 
 dev_dependencies:
   flutter_test:
