--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,8 @@ dependencies:
   flutter_html: ^3.0.0-beta.2
   path_provider: ^2.1.5
   path: ^1.9.0
+  hive_ce: ^2.10.1
+  hive_ce_flutter: ^2.2.0
 
 
 dev_dependencies:
@@ -64,6 +66,7 @@ dev_dependencies:
   build_runner: ^2.4.14
   json_serializable: ^6.8.0
   flutter_lints: ^4.0.0
+  hive_ce_generator: ^1.8.2
 
 
 dependency_overrides:
