ajout de nouvelles URLs.

--- a/.env
+++ b/.env
@@ -7,6 +7,8 @@ AMENU_URL='http://10.0.2.2:3000/api/app-menu'
 CART_URL='http://10.0.2.2:3000/api/carts'
 ADDRESS_URL='http://10.0.2.2:3000/api/addresses'
 ORDER_URL='http://10.0.2.2:3000/api/orders'
+SUGGESTION_URL='http://10.0.2.2:3000/api/suggestions'
+STOCK_URL='http://10.0.2.2:3000/api/stocks'
 
 
 Local='http://10.0.2.2'
